#4325 alignment issue fixed

--- a/includes/admin-style.css
+++ b/includes/admin-style.css
@@ -1148,10 +1148,10 @@ div#section-ampforwp-ads-section h3:before{
     }
 }
 div#section-amp-ads_1, table#section-table-amp-ads_1{
-    max-width: 75%;
+    max-width: 73%;
 }
 div#section-ampforwp-ads-section, table#section-table-ampforwp-ads-section{
-    max-width: 24%;
+    max-width: 26%;
     float: right;
     position: relative;
     margin-top: -37px;
